Subdivision Surface Modifier on meshes without faces does not work in editmode #59140

Closed
opened 2018-12-10 20:25:46 +01:00 by Pierre Tufenkjian · 18 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken:
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

In Edit Mode when i want to Mesh curve circle segments make smooth with using modifier - subdivision surface , its not be in smooth toggle like 2.79 . Please can fix this bug . Thank you. Regards. Pierre

**System Information** Operating system: Graphics card: **Blender Version** Broken: (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). In Edit Mode when i want to Mesh curve circle segments make smooth with using modifier - subdivision surface , its not be in smooth toggle like 2.79 . Please can fix this bug . Thank you. Regards. Pierre

Added subscriber: @PiettroJewelry

Added subscriber: @PiettroJewelry

#62146 was marked as duplicate of this issue

#62146 was marked as duplicate of this issue
Pierre Tufenkjian self-assigned this 2018-12-10 20:26:48 +01:00

In Edit Mode when i want to Mesh curve circle segments make smooth with using modifier - subdivision surface , its not be in smooth toggle like 2.79 . Please can fix this bug . Thank you. Regards. Pierre

name

In Edit Mode when i want to Mesh curve circle segments make smooth with using modifier - subdivision surface , its not be in smooth toggle like 2.79 . Please can fix this bug . Thank you. Regards. Pierre [name ](https://photos.app.goo.gl/bBU4ZBB4sdhULyQe7)
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Pierre Tufenkjian was unassigned by Philipp Oeser 2018-12-13 12:13:28 +01:00
Sergey Sharybin was assigned by Philipp Oeser 2018-12-13 12:13:28 +01:00
Member

Confirmed for meshes without faces.

@Sergey: mind having a look?

Confirmed for meshes without faces. @Sergey: mind having a look?
Philipp Oeser changed title from bout Mesh Curve circle in Subdivision Modifiers not work , when i toggle to smooth its not work in 2.8 to Subdivision Surface Modifier on meshes without faces does not work in editmode 2018-12-13 12:14:54 +01:00

Hi Sergey , i uploaded blender-2.80-7d4d9e9dbd3-win64 in December 13 today , still bug not fix as i checked .I think before 2 or 3 days was fixed but last 2 days when i uploaded updated Blender its still . Can please fix it .
Thank you.
Appreciate your work.
Best Regards.
Pierre
https://photos.app.goo.gl/pna5FWVGmfjYqX429

Hi Sergey , i uploaded blender-2.80-7d4d9e9dbd3-win64 in December 13 today , still bug not fix as i checked .I think before 2 or 3 days was fixed but last 2 days when i uploaded updated Blender its still . Can please fix it . Thank you. Appreciate your work. Best Regards. Pierre https://photos.app.goo.gl/pna5FWVGmfjYqX429

Thank you Philipp i appreciate your work too , hope will fix bugs soon , today i tried still not fix.
Thank you Philipp and Sergey .
Best Regards.
Pierre

Thank you Philipp i appreciate your work too , hope will fix bugs soon , today i tried still not fix. Thank you Philipp and Sergey . Best Regards. Pierre

Well, not sure why one would expect bug to be fixed in the nightly builds, the report is still marked as Open.. We fix bugs as soon as time frame allows us. Is not like we don't fix them to keep artists unhappy. But keep in mind, we've got 100 times more open reports than developers dealing with those..
Bit of patience, my friend ;)

Well, not sure why one would expect bug to be fixed in the nightly builds, the report is still marked as Open.. We fix bugs as soon as time frame allows us. Is not like we don't fix them to keep artists unhappy. But keep in mind, we've got 100 times more open reports than developers dealing with those.. Bit of patience, my friend ;)
Sergey Sharybin removed their assignment 2018-12-14 09:52:50 +01:00
Clément Foucault was assigned by Sergey Sharybin 2018-12-14 09:52:50 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

@fclem, actually, i am not sure what's going on there. As for subdiv modifier i generate all edges and set the render flag. Mind having a loot and tell if it's anything specific draw manager is missing? Or maybe it's something totally in the control of draw manager?

@fclem, actually, i am not sure what's going on there. As for subdiv modifier i generate all edges and set the render flag. Mind having a loot and tell if it's anything specific draw manager is missing? Or maybe it's something totally in the control of draw manager?

Hello ,
I did short video compare between 2.79 and 2.8 for Mesh Circle Curve how its work during in subdivision modifier smooth and quad toggle in 2.79 its work fine smooth toggle but in 2.8 still not work in smooth toggle in edit mode .
Please check video example.
Thank you.
Regards.
Pierre

https://photos.app.goo.gl/rrGU5iE7GjJ4edUy9

Hello , I did short video compare between 2.79 and 2.8 for Mesh Circle Curve how its work during in subdivision modifier smooth and quad toggle in 2.79 its work fine smooth toggle but in 2.8 still not work in smooth toggle in edit mode . Please check video example. Thank you. Regards. Pierre https://photos.app.goo.gl/rrGU5iE7GjJ4edUy9

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This is the solution that came to my mind (but I did not consider all cases):

diff --git a/source/blender/draw/intern/draw_cache_impl_mesh.c b/source/blender/draw/intern/draw_cache_impl_mesh.c
index 3037a2fe225..c7b5c4853c2 100644
--- a/source/blender/draw/intern/draw_cache_impl_mesh.c
+++ b/source/blender/draw/intern/draw_cache_impl_mesh.c
@@ -474,8 +474,8 @@ static MeshRenderData *mesh_render_data_create_ex(
 			rdata->mapped.l_origindex = CustomData_get_layer(&me_cage->ldata, CD_ORIGINDEX);
 			rdata->mapped.p_origindex = CustomData_get_layer(&me_cage->pdata, CD_ORIGINDEX);
 			rdata->mapped.supported = (
-			        rdata->mapped.v_origindex &&
-			        rdata->mapped.e_origindex &&
+			        rdata->mapped.v_origindex ||
+			        rdata->mapped.e_origindex ||
 			        rdata->mapped.p_origindex);
 		}
 

(I noticed that there is also a bug in the selection of loose edges vertices).

This is the solution that came to my mind (but I did not consider all cases): ``` diff --git a/source/blender/draw/intern/draw_cache_impl_mesh.c b/source/blender/draw/intern/draw_cache_impl_mesh.c index 3037a2fe225..c7b5c4853c2 100644 --- a/source/blender/draw/intern/draw_cache_impl_mesh.c +++ b/source/blender/draw/intern/draw_cache_impl_mesh.c @@ -474,8 +474,8 @@ static MeshRenderData *mesh_render_data_create_ex( rdata->mapped.l_origindex = CustomData_get_layer(&me_cage->ldata, CD_ORIGINDEX); rdata->mapped.p_origindex = CustomData_get_layer(&me_cage->pdata, CD_ORIGINDEX); rdata->mapped.supported = ( - rdata->mapped.v_origindex && - rdata->mapped.e_origindex && + rdata->mapped.v_origindex || + rdata->mapped.e_origindex || rdata->mapped.p_origindex); } ``` (I noticed that there is also a bug in the selection of loose edges vertices).

Hello please can fix this bug in Blender 2.8 , still not fixed , if you please fix it .
Thank you.
Regards.
Pierre

Hello please can fix this bug in Blender 2.8 , still not fixed , if you please fix it . Thank you. Regards. Pierre

Added subscriber: @timesfree1

Added subscriber: @timesfree1

This issue was referenced by 81ae7773e7

This issue was referenced by 81ae7773e74a2f393b0ecf1818335c2b46668e4a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Ok Thank you .
Regards.
Pierre

Ok Thank you . Regards. Pierre
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59140
No description provided.