Fix T59140 : Loose edges of final mesh does not display in edit mode